Added base setup

--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,12 @@
 
 @import url('./buttons.css');
 @import url('./nav.css');
+@import url('./card.css');
 
 @import url('./nesting.css');
-@import url('./card.css');
 @import url('./container-queries.css');
 @import url('./pseudo-classes.css');
+@import url('./units.css');
 
 body {
     background: var(--primary-clr-light);
